skill section added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,46 @@
             </div>
 
         </section>
+
+        <section class="what-i-do">
+            <h3 class="section-title">What i DO</h3>
+
+            <div class="skills-container">
+                <div class="skill">
+                    <img src="portfolio-resources-main/images/icons/js.png" alt="">
+                    <p class="skill-title">JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi exercitationem amet, fuga porro fugit eum!</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources-main/images/icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Minima repudiandae doloremque vero officiis dolorum tenetur magni, accusamus laboriosam corrupti, illo beatae incidunt vitae.</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources-main/images/icons/nodejs.png" alt="">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">Numquam modi in eligendi tenetur quibusdam ad ipsam provident, dicta enim perferendis sunt. Animi, recusandae?</p>
+                </div>
+                <div class="skill">
+                    <img src="portfolio-resources-main/images/icons/mongo.png" alt="">
+                    <p class="skill-title">MongoDb</p>
+                    <p class="skill-description">Cumque maiores, eum similique facere quia asperiores odio voluptatum, at accusamus numquam fugit aspernatur dolores?</p>
+                </div>
+            </div>
+        </section>
+
+        <!----Resume section-->
+
+        <section class="resume">
+
+            <h3 class="section-t
+            ">A summury of my Resume</h3>
+            <div class="resume-content">
+                <div>
+                    
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
